fixed upward shift of nav links during hover event

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ body {
 
 .nav-link {
     color: #575A5E;
+    border-bottom: 0.2rem solid transparent;
 }
 
 .nav-link:hover {
